# sre-platform-lab

./: .env.example  .gitignore  Makefile  README.md  codecov.yml  docker-compose.yml  ruff.toml
.claude/: CLAUDE.md
.github/workflows/: ci-pulseboard-api.yml  ci-pulseboard-consumer.yml  ci-pulseboard-shared.yml  ci-pulseboard-ui.yml  ci-pulseboard-worker.yml  ci.yml  codeql.yml  python-app-ci.yml
apps/lib/: .gitignore  Makefile  pyproject.toml
apps/lib/pulseboard_shared/: models.py
apps/lib/tests/: test_models.py
apps/pulseboard-api/: .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
apps/pulseboard-api/.claude/: CLAUDE.md
apps/pulseboard-api/app/: db.py  main.py  metrics.py  models.py  pubsub.py  schemas.py
apps/pulseboard-api/app/routers/: events.py  health.py
apps/pulseboard-api/tests/: conftest.py  test_db.py  test_events.py  test_health.py  test_main.py  test_metrics.py  test_models.py  test_pubsub.py
apps/pulseboard-consumer/: Dockerfile  Makefile  README.md  pyproject.toml
apps/pulseboard-consumer/.claude/: CLAUDE.md
apps/pulseboard-consumer/app/: consumer.py  db.py  main.py  metrics.py  models.py
apps/pulseboard-consumer/tests/: conftest.py  test_consumer.py  test_db.py  test_main.py  test_metrics.py  test_models.py
apps/pulseboard-ui/: .gitignore  Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/pulseboard-worker/: Dockerfile  Makefile  README.md  pyproject.toml
docs/: design-decisions.md
infra/alertmanager/: alertmanager.yml
(+21 files in other folders)
