[project]
name = "pulseboard-shared"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "python-ulid>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
