[project]
name = "pulseboard-api"
version = "0.1.0"
description = "PulseBoard backend API — FastAPI service for the Reliability Lab demo workload"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "prometheus-client>=0.21.0",
    "psycopg2-binary>=2.9.0",
    "google-cloud-pubsub>=2.21.0",
    "python-ulid>=3.1.0",
    "pulseboard-shared",
]

[tool.uv.sources]
pulseboard-shared = { path = "../lib" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
