[project]
name = "pulseboard-consumer"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-pubsub>=2.21.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-ulid>=3.1.0",
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
